# libx

./: .gitignore
assets/shaders/: bones.cg  diffuse_fs.cg  diffuse_vs.cg
development/dependencies/: MSSCCPRJ.SCC
development/dependencies/lib/Win32/: zlib.lib  zlibd.lib  zlibdu.lib  zlibu.lib
development/dependencies/lib/x64/: zlib.lib  zlibd.lib  zlibdu.lib  zlibu.lib
development/dependencies/project_files/vc1400/: dependencies.ncb  dependencies.sln  zlib.vcproj
development/dependencies/project_files/vc1500/: dependencies.ncb  dependencies.sln  zlib.vcproj
development/doc/doc/: index.html  main.css  navigation.html  start.html
development/doc/src/: commondoc.cfg  doxygen.css  footer.html  generate_all_xp.bat  xmeshgenerator.cfg  xmodellib_core.cfg  xmodelviewer.cfg
development/project_files/linux_i386/: Makefile.am  configure.ac
development/project_files/linux_i386/xmodellib_core/: Makefile.am
development/project_files/vc1310/: test.vcproj  xmeshgenerator.vcproj  xmodellib.sln  xmodellib_core.vcproj  xmodelviewer.vcproj
development/project_files/vc1400/: deploy_shaders.cmd  libx.sln  libx.vsscc  libx_core.vcproj  libx_model.vcproj  libx_viewer.vcproj
development/project_files/vc1400/DebugUnicode/: BuildLog.htm  vc80.idb
development/project_files/vc1500/: xmodellib.vsscc
development/src/libx_core/: guid.h  header.cpp  header.h  interface.cpp  interface.h  serializer.cpp  serializer.h  temporalinfo.cpp  temporalinfo.h
development/src/libx_core/doc/: file_format.dox  mainpage.dox  parsing_object_hierarchy.dox  scanning.dox  template_reference.dox
development/src/libx_core/global/: global.h
development/src/libx_core/scanner/: binaryscanner.cpp  binaryscanner.h  compressedbinaryscanner.cpp  compressedbinaryscanner.h  mszip.h  mszipd.c  scanner.cpp  scanner.h  textscanner.cpp  textscanner.h
development/src/libx_core/templates/: animation.cpp  animation.h  animationkey.cpp  animationkey.h  animationoptions.cpp  animationoptions.h  animationset.cpp  animationset.h  animtickspersecond.cpp  animtickspersecond.h  boolean.cpp  boolean.h  boolean2d.cpp  boolean2d.h  colorrgb.cpp  colorrgb.h  colorrgba.cpp  colorrgba.h  coords2d.cpp  coords2d.h  decldata.cpp  decldata.h  effectdword.cpp  effectdword.h  effectfloats.cpp  effectfloats.h  effectinstance.cpp  effectinstance.h  effectparamdword.cpp  effectparamdword.h  effectparamfloats.cpp  effectparamfloats.h  effectparamstring.cpp  effectparamstring.h  effectstring.cpp  effectstring.h  floatkeys.cpp  floatkeys.h  frame.cpp  frame.h  (+46 more)
development/src/libx_core/tokens/: standalonetoken.cpp  standalonetoken.h  token.cpp  token.h  tokenfloatlist.cpp  tokenfloatlist.h  tokenguid.cpp  tokenguid.h  tokeninteger.cpp  tokeninteger.h  tokenintegerlist.cpp  tokenintegerlist.h  tokenname.cpp  tokenname.h  tokens.h  tokenstring.cpp  tokenstring.h
development/src/libx_core/writer/: textwriter.cpp  textwriter.h  writer.cpp  writer.h
development/src/libx_model/: decompose.c  decompose.h  exception.h  xmeshgenerator.cpp  xmeshgenerator.h
development/src/libx_model/model/: bone.cpp  bone.h  entity.cpp  entity.h  frame.cpp  frame.h  geometry.cpp  geometry.h  material.cpp  (+19 more)
development/src/libx_viewer/: arcball.cpp  arcball.h  light.h  main.cpp  model.cpp  model.h  modelshaders.cpp  modelshaders.h  viewerscene.cpp  viewerscene.h  world.cpp  world.h
(+87 files in other folders)
