bin_PROGRAMS = xmodellib_core

xmodellib_core_SOURCES = \
	../../../xmodellib_core/global/io/buffer/fileinputbuffer.cpp \
	../../../xmodellib_core/global/io/buffer/inputbuffer.cpp \
	../../../xmodellib_core/global/io/stream/bufferinputstream.cpp \
	../../../xmodellib_core/tokens/xtoken.cpp \
	../../../xmodellib_core/tokens/xstandalonetoken.cpp \
	../../../xmodellib_core/tokens/xtokenfloatlist.cpp \
	../../../xmodellib_core/tokens/xtokenguid.cpp \
	../../../xmodellib_core/tokens/xtokeninteger.cpp \
	../../../xmodellib_core/tokens/xtokenintegerlist.cpp \
	../../../xmodellib_core/tokens/xtokenname.cpp \
	../../../xmodellib_core/tokens/xtokenstring.cpp \
	../../../xmodellib_core/templates/templates.cpp \
	../../../xmodellib_core/templates/xanimtickspersecond.cpp \
	../../../xmodellib_core/templates/xcolorrgba.cpp \
	../../../xmodellib_core/templates/xcolorrgb.cpp \
	../../../xmodellib_core/templates/xcoords2d.cpp \
	../../../xmodellib_core/templates/xdecldata.cpp \
	../../../xmodellib_core/templates/xeffectdword.cpp \
	../../../xmodellib_core/templates/xeffectfloats.cpp \
	../../../xmodellib_core/templates/xeffectinstance.cpp \
	../../../xmodellib_core/templates/xeffectparamdword.cpp \
	../../../xmodellib_core/templates/xeffectparamfloats.cpp \
	../../../xmodellib_core/templates/xeffectparamstring.cpp \
	../../../xmodellib_core/templates/xeffectstring.cpp \
	../../../xmodellib_core/templates/xframe.cpp \
	../../../xmodellib_core/templates/xframetransformmatrix.cpp \
	../../../xmodellib_core/templates/xfvfdata.cpp \
	../../../xmodellib_core/templates/xheadertemplate.cpp \
	../../../xmodellib_core/templates/xmaterial.cpp \
	../../../xmodellib_core/templates/xmatrix4x4.cpp \
	../../../xmodellib_core/templates/xmesh.cpp \
	../../../xmodellib_core/templates/xmeshface.cpp \
	../../../xmodellib_core/templates/xmeshmateriallist.cpp \
	../../../xmodellib_core/templates/xmeshnormals.cpp \
	../../../xmodellib_core/templates/xmeshtexturecoords.cpp \
	../../../xmodellib_core/templates/xtemplate.cpp \
	../../../xmodellib_core/templates/xtexturefilename.cpp \
	../../../xmodellib_core/templates/xvector.cpp \
	../../../xmodellib_core/templates/xvertexduplicationindices.cpp \
	../../../xmodellib_core/templates/xvertexelement.cpp \
	../../../xmodellib_core/generic/xarraydimension.cpp \
	../../../xmodellib_core/generic/xgenericelement.cpp \
	../../../xmodellib_core/generic/xgenerictemplate.cpp \
	../../../xmodellib_core/generic/xgenericvalue.cpp \
	../../../xmodellib_core/xheader.cpp \
	../../../xmodellib_core/xinterface.cpp \
	../../../xmodellib_core/xserializer.cpp \
	../../../xmodellib_core/xtemporalinfo.cpp \
	../../../xmeshgenerator/interfaces/entity.cpp \
	../../../xmeshgenerator/interfaces/frame.cpp \
	../../../xmeshgenerator/interfaces/geometry.cpp \
	../../../xmeshgenerator/interfaces/material.cpp \
	../../../xmeshgenerator/interfaces/mesh.cpp \
	../../../xmeshgenerator/null/nullentity.cpp \
	../../../xmeshgenerator/null/nullframe.cpp \
	../../../xmeshgenerator/null/nullgeometry.cpp \
	../../../xmeshgenerator/null/nullmaterial.cpp \
	../../../xmeshgenerator/null/nullmesh.cpp \
	../../../xmeshgenerator/xmeshgenerator_judihui.cpp \
	../../../test/main.cpp
